# Object-Detection-Sample-of-SNPE

./: ObjectDetectionSample-doc.docx  readme.md
ObjectDetectionSample/: CMakeLists.txt  objsample.bb
ObjectDetectionSample/include/: Log.h  ObjectDetection.h  TimeUtil.h  common.h
ObjectDetectionSample/models/: model_conversion_instruction.md
ObjectDetectionSample/src/: ObjectDetection.cpp  snpe_udl_layers.cpp
ObjectDetectionSample/test/: main.cpp
